devtools/client/themes/fonts.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
/
*
CSS
Variables
specific
to
the
font
editor
that
aren
'
t
defined
by
the
themes
*
/
:
root
{
-
-
highlight
-
color
:
var
(
-
-
blue
-
55
)
;
-
-
input
-
background
-
color
:
white
;
-
-
input
-
border
-
color
:
var
(
-
-
grey
-
30
)
;
-
-
input
-
text
-
color
:
var
(
-
-
grey
-
90
)
;
-
-
preview
-
input
-
background
:
var
(
-
-
theme
-
toolbar
-
background
)
;
-
-
secondary
-
label
-
color
:
var
(
-
-
grey
-
45
)
;
-
-
slider
-
thumb
-
color
:
var
(
-
-
grey
-
50
)
;
-
-
slider
-
track
-
color
:
var
(
-
-
grey
-
30
)
;
}
:
root
.
theme
-
dark
{
-
-
input
-
background
-
color
:
var
(
-
-
grey
-
70
)
;
-
-
input
-
border
-
color
:
var
(
-
-
grey
-
70
)
;
-
-
input
-
text
-
color
:
var
(
-
-
grey
-
40
)
;
-
-
preview
-
input
-
background
:
#
222225
;
-
-
slider
-
thumb
-
color
:
var
(
-
-
grey
-
40
)
;
-
-
slider
-
track
-
color
:
var
(
-
-
grey
-
60
)
;
}
#
sidebar
-
panel
-
fontinspector
{
margin
:
0
;
display
:
flex
;
flex
-
direction
:
column
;
width
:
100
%
;
height
:
100
%
;
overflow
:
auto
;
}
#
font
-
container
{
flex
:
auto
;
}
#
font
-
editor
{
padding
-
bottom
:
.
5em
;
}
#
font
-
editor
summary
{
-
moz
-
user
-
select
:
none
;
cursor
:
pointer
;
margin
-
bottom
:
.
4em
;
width
:
-
moz
-
fit
-
content
;
}
#
font
-
editor
details
{
padding
-
bottom
:
.
5em
;
}
#
font
-
editor
details
.
label
-
open
#
font
-
editor
details
.
label
-
close
{
display
:
none
;
}
#
font
-
editor
details
[
open
]
.
label
-
close
{
display
:
inline
-
block
;
}
#
font
-
editor
details
:
not
(
[
open
]
)
.
label
-
open
{
display
:
inline
-
block
;
}
#
font
-
editor
.
devtools
-
sidepanel
-
no
-
result
{
padding
-
bottom
:
0
;
}
.
fonts
-
list
{
padding
:
0
;
margin
:
0
;
list
-
style
:
none
;
}
.
font
{
border
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
border
-
width
:
0
0
1px
0
;
display
:
grid
;
grid
-
template
-
columns
:
1fr
auto
;
grid
-
column
-
gap
:
10px
;
padding
:
10px
20px
;
overflow
:
auto
;
}
#
font
-
container
.
theme
-
twisty
{
display
:
inline
-
block
;
cursor
:
pointer
;
vertical
-
align
:
bottom
;
}
#
font
-
preview
-
input
-
container
{
background
:
var
(
-
-
preview
-
input
-
background
)
;
border
-
bottom
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
display
:
flex
;
height
:
23px
;
}
#
font
-
preview
-
input
-
container
input
{
background
-
image
:
none
;
flex
:
1
;
padding
-
left
:
14px
;
}
.
font
-
preview
{
grid
-
column
:
2
;
grid
-
row
:
1
/
span
2
;
object
-
fit
:
contain
;
height
:
50px
;
width
:
100
%
;
}
.
font
-
name
.
font
-
family
-
name
{
font
-
weight
:
normal
;
white
-
space
:
nowrap
;
}
.
font
-
name
{
display
:
inline
-
block
;
margin
-
bottom
:
0
.
6em
;
font
-
size
:
1em
;
color
:
var
(
-
-
grey
-
50
)
;
}
.
font
-
family
-
name
{
margin
-
bottom
:
0
.
2em
;
font
-
size
:
1
.
2em
;
}
.
font
-
group
{
margin
-
bottom
:
.
5em
;
}
.
font
-
group
.
font
-
name
{
white
-
space
:
unset
;
margin
-
right
:
.
5em
;
}
.
font
-
group
.
font
-
name
:
:
after
{
content
:
"
"
;
}
.
font
-
group
.
font
-
name
:
nth
-
last
-
child
(
1
)
:
:
after
{
content
:
"
"
;
}
.
font
-
css
-
code
{
direction
:
ltr
;
margin
:
0
;
overflow
:
hidden
;
text
-
overflow
:
ellipsis
;
color
:
var
(
-
-
theme
-
toolbar
-
color
)
;
grid
-
column
:
span
2
;
position
:
relative
;
inset
-
inline
-
start
:
-
4px
;
}
.
font
-
css
-
code
-
expander
:
:
before
{
content
:
"
\
2026
"
;
display
:
inline
-
block
;
width
:
12px
;
height
:
8px
;
margin
:
0
2px
;
line
-
height
:
3px
;
color
:
var
(
-
-
theme
-
body
-
color
-
inactive
)
;
border
-
radius
:
3px
;
border
-
style
:
solid
;
border
-
width
:
1px
;
text
-
align
:
center
;
vertical
-
align
:
middle
;
}
.
font
-
control
{
display
:
flex
;
flex
-
direction
:
row
;
flex
-
wrap
:
nowrap
;
justify
-
content
:
space
-
between
;
align
-
items
:
center
;
padding
:
0
18px
;
margin
:
.
6em
0
;
}
/
*
Style
*
all
*
axis
controls
with
a
top
separator
.
See
reset
below
.
*
/
.
font
-
control
-
axis
{
border
-
top
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
padding
-
top
:
1
.
1em
;
}
/
*
Remove
styles
form
all
axis
controls
aside
from
the
first
one
.
Workaround
for
:
first
-
of
-
type
which
doesn
'
t
work
with
class
names
.
*
/
.
font
-
control
-
axis
~
.
font
-
control
-
axis
{
border
-
top
:
unset
;
padding
-
top
:
unset
;
}
.
font
-
control
-
used
-
fonts
{
align
-
items
:
flex
-
start
;
border
-
bottom
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
margin
-
top
:
0
;
margin
-
bottom
:
1em
;
padding
-
top
:
1em
;
}
.
font
-
control
-
box
.
font
-
control
-
input
{
flex
:
4
;
min
-
width
:
100px
;
}
.
font
-
control
-
input
{
display
:
flex
;
flex
-
wrap
:
nowrap
;
align
-
items
:
center
;
}
.
font
-
control
-
input
.
devtools
-
checkbox
-
toggle
{
margin
:
2px
0
;
}
.
font
-
control
-
label
{
display
:
inline
-
block
;
flex
:
1
;
font
-
size
:
12px
;
min
-
width
:
70px
;
margin
-
right
:
10px
;
-
moz
-
user
-
select
:
none
;
}
.
font
-
control
-
label
-
text
{
display
:
block
;
overflow
:
hidden
;
text
-
overflow
:
ellipsis
;
white
-
space
:
nowrap
;
}
.
font
-
control
-
label
-
detail
{
color
:
var
(
-
-
secondary
-
label
-
color
)
;
font
-
size
:
smaller
;
}
.
font
-
value
-
input
{
margin
-
left
:
10px
;
text
-
align
:
right
;
width
:
60px
;
padding
:
2px
3px
;
}
.
font
-
value
-
input
.
font
-
value
-
select
{
color
:
var
(
-
-
input
-
text
-
color
)
;
border
:
1px
solid
var
(
-
-
input
-
border
-
color
)
;
background
-
color
:
var
(
-
-
input
-
background
-
color
)
;
}
/
*
Styles
for
disabled
input
fields
*
/
.
font
-
value
-
input
[
disabled
]
.
font
-
value
-
select
[
disabled
]
.
font
-
value
-
slider
[
disabled
]
{
opacity
:
0
.
5
;
}
/
*
Do
not
use
browser
"
invalid
"
state
*
/
.
font
-
value
-
slider
:
-
moz
-
ui
-
invalid
.
font
-
value
-
input
:
-
moz
-
ui
-
invalid
{
box
-
shadow
:
none
;
}
/
*
Do
not
show
dotted
line
focus
outline
*
/
.
font
-
value
-
input
:
-
moz
-
focusring
{
outline
:
none
;
}
/
*
Make
native
number
steppers
disappear
by
treating
it
as
text
field
*
/
.
font
-
value
-
input
[
type
=
number
]
{
-
moz
-
appearance
:
textfield
;
}
/
*
Do
not
show
number
stepper
for
line
height
and
font
-
size
*
/
.
font
-
value
-
input
[
name
=
line
-
height
]
.
font
-
value
-
input
[
name
=
font
-
size
]
{
-
moz
-
appearance
:
textfield
;
padding
-
right
:
5px
;
border
-
right
:
none
;
}
/
*
Mock
separator
because
inputs
don
'
t
have
distinguishable
borders
in
dark
theme
*
/
.
theme
-
dark
.
font
-
value
-
input
+
.
font
-
value
-
select
{
margin
-
left
:
2px
;
}
/
*
Custom
styles
for
<
select
>
elements
within
the
font
editor
.
*
/
.
font
-
value
-
select
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
select
-
arrow
.
svg
)
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
right
4px
center
;
fill
:
var
(
-
-
theme
-
icon
-
color
)
;
-
moz
-
context
-
properties
:
fill
;
-
moz
-
appearance
:
none
;
box
-
shadow
:
none
;
padding
:
1px
10px
1px
2px
;
min
-
width
:
3
.
8em
;
}
.
font
-
value
-
select
:
-
moz
-
focusring
{
color
:
transparent
;
text
-
shadow
:
0
0
0
var
(
-
-
input
-
text
-
color
)
;
}
.
font
-
value
-
input
:
focus
.
font
-
value
-
select
:
focus
{
outline
:
1px
solid
var
(
-
-
highlight
-
color
)
;
outline
-
offset
:
-
1px
;
}
.
font
-
value
-
slider
-
container
{
flex
:
1
;
min
-
width
:
50px
;
position
:
relative
;
}
/
*
Firefox
doesn
'
t
support
pseudo
-
elements
on
inputs
.
Using
the
container
instead
.
*
/
.
font
-
value
-
slider
-
container
:
:
before
.
font
-
value
-
slider
-
container
:
:
after
{
-
moz
-
user
-
select
:
none
;
color
:
var
(
-
-
secondary
-
label
-
color
)
;
font
-
size
:
smaller
;
position
:
absolute
;
bottom
:
-
.
6em
;
visibility
:
hidden
;
}
.
font
-
control
-
input
:
hover
.
font
-
value
-
slider
-
container
:
:
before
.
font
-
control
-
input
:
hover
.
font
-
value
-
slider
-
container
:
:
after
.
font
-
control
-
input
:
focus
-
within
.
font
-
value
-
slider
-
container
:
:
before
.
font
-
control
-
input
:
focus
-
within
.
font
-
value
-
slider
-
container
:
:
after
{
visibility
:
visible
;
}
.
font
-
value
-
slider
-
container
:
:
before
{
content
:
attr
(
data
-
min
)
;
left
:
.
3em
;
}
.
font
-
value
-
slider
-
container
:
:
after
{
content
:
attr
(
data
-
max
)
;
right
:
.
3em
;
}
.
font
-
value
-
slider
{
background
:
transparent
;
width
:
100
%
;
margin
:
0
;
}
/
*
The
value
of
font
-
weight
goes
from
100
to
900
in
increments
of
100
.
Decorate
the
slider
for
font
-
weight
to
have
9
vertical
notches
using
a
linear
gradient
.
*
/
.
font
-
value
-
slider
[
name
=
font
-
weight
]
{
-
-
notch
-
size
:
3px
;
/
*
Draw
a
vertical
line
to
get
one
notch
per
background
-
image
instance
*
/
background
-
image
:
linear
-
gradient
(
90deg
var
(
-
-
slider
-
track
-
color
)
var
(
-
-
notch
-
size
)
transparent
0
)
;
/
*
Offset
the
background
so
the
notch
aligns
with
the
center
of
the
slider
thumb
*
/
background
-
position
:
5px
center
;
/
*
Repeat
the
background
-
image
horizontally
*
/
background
-
repeat
:
repeat
-
x
;
/
*
Size
the
background
to
get
nine
visible
notch
instances
.
*
/
background
-
size
:
calc
(
12
.
5
%
-
var
(
-
-
notch
-
size
)
/
2
)
7px
;
}
.
font
-
value
-
slider
:
-
moz
-
focusring
{
outline
:
none
;
}
.
font
-
value
-
slider
:
:
-
moz
-
focus
-
outer
{
border
:
0
;
}
.
font
-
value
-
slider
:
:
-
moz
-
range
-
thumb
{
background
-
color
:
var
(
-
-
slider
-
thumb
-
color
)
;
border
:
0
;
}
.
font
-
value
-
slider
:
focus
:
:
-
moz
-
range
-
thumb
{
background
-
color
:
var
(
-
-
highlight
-
color
)
;
}
.
font
-
value
-
slider
:
:
-
moz
-
range
-
track
{
background
-
color
:
var
(
-
-
slider
-
track
-
color
)
;
height
:
3px
;
}
.
font
-
origin
{
margin
-
top
:
-
.
25em
;
color
:
var
(
-
-
theme
-
comment
)
;
justify
-
self
:
start
;
}
.
font
-
origin
.
system
{
text
-
transform
:
capitalize
;
}
.
font
-
origin
.
remote
{
display
:
grid
;
grid
-
template
-
columns
:
1fr
20px
;
}
.
font
-
origin
.
remote
.
url
{
text
-
overflow
:
ellipsis
;
overflow
:
hidden
;
white
-
space
:
nowrap
;
}
.
font
-
origin
.
copy
-
icon
{
border
:
0
;
padding
:
0
;
position
:
relative
;
cursor
:
pointer
;
width
:
12px
;
height
:
12px
;
place
-
self
:
center
;
background
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
copy
.
svg
)
no
-
repeat
;
background
-
size
:
12px
;
background
-
position
-
x
:
-
1px
;
-
moz
-
context
-
properties
:
fill
;
fill
:
var
(
-
-
grey
-
50
)
;
}
#
font
-
container
.
accordion
{
border
-
top
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
}
#
font
-
container
.
accordion
.
_content
{
padding
:
0
;
}
#
font
-
container
.
accordion
+
.
accordion
{
border
-
top
:
none
;
}

